// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy.config;

option java_package = "org.wfanet.measurement.internal.duchy.config";
option java_multiple_files = true;

// Data Provider certificate configuration.
message DataProviderCertConfig {
  message DataProvider {
    // The ID of the Data Provider.
    fixed64 data_provider_id = 1;

    // The SKID of the Data Provider's root certificate
    bytes root_certificate_skid = 3;
  }

  // The list of all the Data Provider certificate information in this config
  // message.
  repeated DataProvider data_providers = 1;
}
