// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy.protocol;

option java_package = "org.wfanet.measurement.internal.duchy.protocol";
option java_multiple_files = true;

// Parameters used for the sketch of HonestMajorityShareShuffle protocol
// creation and estimation.
message ShareShuffleSketchParams {
  // The size of the sketch.
  int64 sketch_size = 1;
  // Length of each item in bytes. #_EDPs * max_frequency should be no more than
  // 2^(bytes_per_item*8).
  int32 bytes_per_item = 2;
}
