// Copyright 2024 The Measurement Proto Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.system.v1alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

option java_package = "org.wfanet.measurement.system.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "ComputationStageProto";

// Stage of a MPC protocol for a Computation.
message ComputationStage {
  option (google.api.resource) = {
    type: "halo-system.wfanet.org/ComputationStage"
    pattern: "computations/{computation}/stage"
    singular: "computationStage"
    plural: "computationStages"
  };

  // Resource name.
  string name = 1;

  // Stage of Liquid Legions V2 protocol.
  message LiquidLegionsV2Stage {
    enum Stage {
      STAGE_UNSPECIFIED = 0;
      INITIALIZATION_PHASE = 1;
      WAIT_REQUISITIONS_AND_KEY_SET = 2;
      CONFIRMATION_PHASE = 3;
      WAIT_TO_START = 4;
      WAIT_SETUP_PHASE_INPUTS = 5;
      SETUP_PHASE = 6;
      WAIT_EXECUTION_PHASE_ONE_INPUTS = 7;
      EXECUTION_PHASE_ONE = 8;
      WAIT_EXECUTION_PHASE_TWO_INPUTS = 9;
      EXECUTION_PHASE_TWO = 10;
      WAIT_EXECUTION_PHASE_THREE_INPUTS = 11;
      EXECUTION_PHASE_THREE = 12;
      COMPLETE = 13;
    }
  }

  // Stage of Reach Only Liquid Legions V2 protocol.
  message ReachOnlyLiquidLegionsV2Stage {
    enum Stage {
      STAGE_UNSPECIFIED = 0;
      INITIALIZATION_PHASE = 1;
      WAIT_REQUISITIONS_AND_KEY_SET = 2;
      CONFIRMATION_PHASE = 3;
      WAIT_TO_START = 4;
      WAIT_SETUP_PHASE_INPUTS = 5;
      SETUP_PHASE = 6;
      WAIT_EXECUTION_PHASE_INPUTS = 7;
      EXECUTION_PHASE = 8;
      COMPLETE = 9;
    }
  }

  // Stage of Honest Majority Share Shuffle protocol.
  message HonestMajorityShareShuffleStage {
    enum Stage {
      STAGE_UNSPECIFIED = 0;
      INITIALIZED = 1;
      WAIT_TO_START = 2;
      WAIT_ON_SHUFFLE_INPUT_PHASE_ONE = 3;
      SETUP_PHASE = 4;
      WAIT_ON_SHUFFLE_INPUT_PHASE_TWO = 5;
      WAIT_ON_AGGREGATION_INPUT = 6;
      SHUFFLE_PHASE = 7;
      AGGREGATION_PHASE = 8;
      COMPLETE = 9;
    }
  }

  oneof stage {
    LiquidLegionsV2Stage.Stage liquid_legions_v2_stage = 2
        [(google.api.field_behavior) = OUTPUT_ONLY];

    ReachOnlyLiquidLegionsV2Stage.Stage reach_only_liquid_legions_v2_stage = 3
        [(google.api.field_behavior) = OUTPUT_ONLY];

    HonestMajorityShareShuffleStage.Stage honest_majority_share_shuffle_stage =
        4 [(google.api.field_behavior) = OUTPUT_ONLY];
  }

  // RFC 7232 entity tag.
  string etag = 5 [(google.api.field_behavior) = OUTPUT_ONLY];
}